# recido

./: .gitignore  Makefile  compose.yml
api/: .env.docker  Cargo.toml  Dockerfile  ReadMe.md
api/.sqlx/: query-951a5b7883d6272fed109140fe6a23b473b97ae270250c1c9bfcdc048e436d1c.json  query-d5d8e56757762bb5133e7bf6bae027a066fd7a7a74c7704c01d989c3e00c282d.json
api/migrations/: 20260608185033_initial_extensions_and_enums.down.sql  20260608185033_initial_extensions_and_enums.up.sql  20260608194004_create_users_schema.down.sql  20260608194004_create_users_schema.up.sql  20260701163856_alter-users-constraints.down.sql  20260701163856_alter-users-constraints.up.sql
api/src/: config.rs  db.rs  errors.rs  main.rs
api/src/db/: mod.rs
api/src/handler/auth/: change_login.rs  delete_user.rs  login.rs  logout.rs  mod.rs  password.rs  refresh.rs  register.rs
api/src/handler/user/: me.rs
api/src/handler/users/: login.rs  register.rs
api/src/models/user/: dietary_restriction.rs  enums.rs  log.rs  mod.rs  role.rs  user.rs
api/src/models/users/: dietary_restriction.rs  enums.rs  log.rs  session.rs  user.rs
api/src/router/: auth.rs  entrypoint.rs  mod.rs  user.rs  users.rs
api/src/utils/: logs.rs  mod.rs  password.rs
api/src/utils/session/: auth.rs  mod.rs  session.rs  token.rs
api/src/utils/validators/: email.rs  login.rs  mod.rs  password.rs
db/: recido.sql
mobile/: Dockerfile
mobile/android/app/: build.gradle.kts
recido-mobile/android/app/src/main/kotlin/com/recido/mobile/: MainActivity.kt
recido-mobile/ios/Runner.xcodeproj/: project.pbxproj
recido-web/: pyproject.toml
recido-web/core/: settings.py
web/: Dockerfile
