[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
axum-login = "0.18.0"
chrono = "0.4.45"
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"]}
tower = "0.5.3"
tower-http = "0.6.11"
uuid = "1.23.2"
