[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
axum-login = "0.18.0"
bcrypt = "0.19.1"
chrono = { version="0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
serde = {version="1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid" ] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = "0.6.11"
uuid = {version="1.23.2",  features = ["serde", "v4"] }
