[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
axum-extra = {version="0.12.6", features = ["cookie"] }
axum-login = "0.18.0"
base64 = "0.22.1"
bcrypt = "0.19.1"
chrono = { version="0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = {version="10.4.0", features = ["aws_lc_rs"] }
rand = "0.10.1"
serde = {version="1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid", "ipnetwork"] }
time = "=0.3.36"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = "0.6.11"
uuid = {version="1.23.2",  features = ["serde", "v4"] }
